fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -21,6 +21,7 @@
 html,
 body {
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
   /* color: rgb(var(--foreground-rgb));
   background: linear-gradient(
       to bottom,
